--- a/SideMenu/Menu/MenuTableCell.xib
+++ b/SideMenu/Menu/MenuTableCell.xib
@@ -9,27 +9,40 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuCell" id="KGk-i7-Jjw" customClass="MenuTableCell" customModule="SideMenu" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuTableCell" rowHeight="87" id="KGk-i7-Jjw" customClass="MenuTableCell" customModule="SideMenu" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="339" height="87"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="339" height="87"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dXX-1b-zZ8">
-                        <rect key="frame" x="16" y="12" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fzC-nr-dgQ">
+                        <rect key="frame" x="8" y="5" width="51" height="77"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nx-kK-mtF">
+                        <rect key="frame" x="75" y="8" width="256" height="71"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="4nx-kK-mtF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="118-th-TQH"/>
+                    <constraint firstItem="4nx-kK-mtF" firstAttribute="leading" secondItem="fzC-nr-dgQ" secondAttribute="trailing" constant="16" id="6su-8K-G6g"/>
+                    <constraint firstAttribute="bottom" secondItem="4nx-kK-mtF" secondAttribute="bottom" constant="8" id="7Fv-NJ-5O6"/>
+                    <constraint firstItem="fzC-nr-dgQ" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.15" id="DJ6-DN-m39"/>
+                    <constraint firstAttribute="bottom" secondItem="fzC-nr-dgQ" secondAttribute="bottom" constant="5" id="Ojz-dP-rsF"/>
+                    <constraint firstItem="fzC-nr-dgQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="XPj-zv-In2"/>
+                    <constraint firstAttribute="trailing" secondItem="4nx-kK-mtF" secondAttribute="trailing" constant="8" id="i9Z-IG-bSD"/>
+                    <constraint firstItem="fzC-nr-dgQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="t1y-Bw-xqE"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="titleLbl" destination="dXX-1b-zZ8" id="haj-iB-RGJ"/>
+                <outlet property="iconImage" destination="fzC-nr-dgQ" id="wPy-Lp-3SH"/>
+                <outlet property="titleLbl" destination="4nx-kK-mtF" id="UOI-81-4If"/>
             </connections>
-            <point key="canvasLocation" x="133" y="112"/>
+            <point key="canvasLocation" x="145.6521739130435" y="126.22767857142857"/>
         </tableViewCell>
     </objects>
 </document>
