--- a/SideMenu/Menu/MenuVC.xib
+++ b/SideMenu/Menu/MenuVC.xib
@@ -10,7 +10,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MenuVC" customModule="SideMenu" customModuleProvider="target">
             <connections>
                 <outlet property="emailLbl" destination="q9I-BP-0w5" id="Vt9-hX-U79"/>
-                <outlet property="image" destination="IYE-RE-5xV" id="rhR-4m-007"/>
                 <outlet property="menuTable" destination="rq5-BJ-jm4" id="aQ8-6V-Ee9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -23,32 +22,25 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oMa-Lm-Afl">
                     <rect key="frame" x="0.0" y="44" width="310.5" height="818"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IYE-RE-5xV">
-                            <rect key="frame" x="32" y="24" width="246.5" height="163.5"/>
-                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9I-BP-0w5">
-                            <rect key="frame" x="32" y="211.5" width="41" height="21"/>
+                            <rect key="frame" x="32" y="16" width="41" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rq5-BJ-jm4">
-                            <rect key="frame" x="0.0" y="264.5" width="310.5" height="553.5"/>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rq5-BJ-jm4">
+                            <rect key="frame" x="0.0" y="69" width="310.5" height="749"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstItem="q9I-BP-0w5" firstAttribute="leading" secondItem="oMa-Lm-Afl" secondAttribute="leading" constant="32" id="6RB-kd-WC6"/>
-                        <constraint firstItem="IYE-RE-5xV" firstAttribute="width" secondItem="oMa-Lm-Afl" secondAttribute="width" constant="-64" id="BmX-Uh-0bO"/>
+                        <constraint firstItem="q9I-BP-0w5" firstAttribute="top" secondItem="oMa-Lm-Afl" secondAttribute="top" constant="16" id="74r-bj-17x"/>
                         <constraint firstItem="rq5-BJ-jm4" firstAttribute="leading" secondItem="oMa-Lm-Afl" secondAttribute="leading" id="Ebw-fc-3Rc"/>
                         <constraint firstAttribute="bottom" secondItem="rq5-BJ-jm4" secondAttribute="bottom" id="GJ1-0U-h3b"/>
-                        <constraint firstItem="IYE-RE-5xV" firstAttribute="centerX" secondItem="oMa-Lm-Afl" secondAttribute="centerX" id="Ncj-VB-G8f"/>
                         <constraint firstAttribute="trailing" secondItem="rq5-BJ-jm4" secondAttribute="trailing" id="OWk-xs-gcx"/>
                         <constraint firstItem="rq5-BJ-jm4" firstAttribute="top" secondItem="q9I-BP-0w5" secondAttribute="bottom" constant="32" id="UPY-Su-dT1"/>
-                        <constraint firstItem="IYE-RE-5xV" firstAttribute="height" secondItem="oMa-Lm-Afl" secondAttribute="height" multiplier="0.2" id="YjD-RZ-LyJ"/>
-                        <constraint firstItem="IYE-RE-5xV" firstAttribute="top" secondItem="oMa-Lm-Afl" secondAttribute="top" constant="24" id="Yz3-mU-nR5"/>
-                        <constraint firstItem="q9I-BP-0w5" firstAttribute="top" secondItem="IYE-RE-5xV" secondAttribute="bottom" constant="24" id="qm3-7W-fgb"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZUU-Cl-hGz">
